added redux + phone number

--- a/task/src/App.css
+++ b/task/src/App.css
@@ -40,3 +40,9 @@
 .read-the-docs {
   color: #888;
 }
+.PhoneInputInput{
+  background-color: transparent;
+}
+.PhoneInputInput:focus {
+  outline: none;
+}
